--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+*.class
+*.jar
+*.log
+.classpath
+.project
+.settings/
+.vscode/
